--- a/sandbox/build.gradle
+++ b/sandbox/build.gradle
@@ -1,3 +1,12 @@
 apply plugin: 'java'
 apply plugin: 'application'
 mainClassName = "giv_hello_world"
+
+
+repositories {
+    mavenCentral()
+}
+
+dependencies {
+    compile 'org.testng:testng:6.14.3'
+}
